tests/negative/neg_own_source_maybe_null.safe
-- Test: neg_own_source_maybe_null
-- Description: Moving from a source that is not provably non-null.
-- Expected: REJECT move_source_not_nonnull

package move_source_maybe_null_test

   type payload is record
      value : integer
      next : payload

   function bad_move
      source : payload = null
      target : payload = null

      target = source  -- ERROR: source is not provably non-null
